# rusty-beagle2d

./: .gitignore  Cargo.toml  README.md
building/: copy-libraries.ps1
dat/shaders/: fragment.shader  vertex.shader
learnings/: freetype.md  rust-lifetimes.md
learnings/rust/: linking.html  linking.md  workflow.md
rusty-beagle2d-engine/: Cargo.toml
rusty-beagle2d-engine/src/: #main.rs#  main.rs
rusty-beagle2d-engine/src/core/: character-info.rs  font.rs  mod.rs  renderer2d.rs  shader.rs  shader_program.rs  sprite.rs  texture.rs
rusty-beagle2d-freetype/: Cargo.toml  freetype-bindings.rs
rusty-beagle2d-freetype/src/: build.rs  freetype.rs  lib.rs
rusty-beagle2d-glfw/: Cargo.toml  bindings.rs
rusty-beagle2d-glfw/src/: build.rs  glfw.rs  lib.rs  ogl.rs
