[package]
name = "rusty-beagle2d-engine"
version = "0.1.0"
authors = ["CodingBeagle <kasper.rie@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stb_image = "0.2.2"
rusty-beagle2d-glfw = { path = "../rusty-beagle2d-glfw" }
nalgebra-glm = "0.1"