[package]
name = "rusty-beagle2d-freetype"
version = "0.1.0"
authors = ["CodingBeagle <kasper.rie@gmail.com>"]
edition = "2018"
build = "src/build.rs"

# Dependencies used in build scripts have to be specified with [build-dependencies], NOT [dependencies].
[build-dependencies]
bindgen = "0.53.1"

[dependencies]
