[package]
name = "rusty-beagle2d-glfw"
version = "0.1.0"
authors = ["CodingBeagle <kasper.rie@gmail.com>"]
edition = "2018"
build = "src/build.rs"

# Dependencies used in build scripts have to be specified with [build-dependencies], NOT [dependencies].
[build-dependencies]
bindgen = "0.53.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
libc = "0.2.0"
gl = "0.14.0"